Fix breadcrumb rendering bug on mobile devices

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -123,7 +123,7 @@ body {
         // Menu displayed on small screens
         background: $primary;
 
-        a, button {
+        a, button, nav.quarto-page-breadcrumbs {
             color: #fff !important;
             font-weight: bold;
         }
